# TrialLens

./: .gitignore  README.md
apps/api/: pyproject.toml  requirements.txt
apps/api/tests/: test_rag.py
apps/api/triallens/: __init__.py  evals.py  main.py  models.py  rag.py  sample_data.py  sources.py  store.py  text.py
apps/web/: package-lock.json  package.json  tailwind.config.ts
apps/web/app/: globals.css  layout.tsx  page.tsx
apps/web/lib/: api.ts
docs/: architecture.md
