[project]
name = "triallens-api"
version = "0.1.0"
description = "FastAPI backend for TrialLens biomedical evidence intelligence"
requires-python = ">=3.11"
dependencies = [
  "fastapi==0.115.6",
  "uvicorn[standard]==0.34.0",
  "pydantic==2.10.4",
  "httpx==0.28.1",
]

[tool.pytest.ini_options]
pythonpath = ["."]
testpaths = ["tests"]

